# LGeometry

./: CMakeLists.txt  TestRunner.h  main.cpp
include/: LGeometry.h
src/headers/: ConvexPolygon.h  Point.h  Polygon.h  Segment.h
src/sources/: ConvexPolygon.cpp  Point.cpp  Polygon.cpp  Segment.cpp
